tests/specs/graph/fast_check/class_super_unsupported.txt
# https://jsr.io/@scope/a/meta.json
{"versions": { "1.0.0": {} } }

# https://jsr.io/@scope/a/1.0.0_meta.json
{ "exports": { ".": "./mod.ts" } }

# https://jsr.io/@scope/a/1.0.0/mod.ts
class Base {}
function MyFunction() {}
// perhaps it could figure out this scenario though...
export class Child extends MyFunction(Base) {
}

# mod.ts
import 'jsr:@scope/a'

# output
{
  "roots": [
    "file:///mod.ts"
  ],
  "modules": [
    {
      "kind": "esm",
      "dependencies": [
        {
          "specifier": "jsr:@scope/a",
          "code": {
            "specifier": "jsr:@scope/a",
            "resolutionMode": "import",
            "span": {
              "start": {
                "line": 0,
                "character": 7
              },
              "end": {
                "line": 0,
                "character": 21
              }
            }
          }
        }
      ],
      "size": 22,
      "mediaType": "TypeScript",
      "specifier": "file:///mod.ts"
    },
    {
      "kind": "esm",
      "size": 142,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/mod.ts"
    }
  ],
  "redirects": {
    "jsr:@scope/a": "https://jsr.io/@scope/a/1.0.0/mod.ts"
  },
  "packages": {
    "@scope/a@*": "@scope/a@1.0.0"
  }
}

Fast check https://jsr.io/@scope/a/1.0.0/mod.ts:
  error[unsupported-super-class-expr]: super class expression was too complex
   --> https://jsr.io/@scope/a/1.0.0/mod.ts:4:28
    |
  4 | export class Child extends MyFunction(Base) {
    |                            ^^^^^^^^^^^^^^^^ this is the superclass expression
    |
    = hint: extract the superclass expression into a variable

    info: fast check was unable to infer the type of the superclass expression
    docs: https://jsr.io/go/slow-type-unsupported-super-class-expr
